--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.0.4",
+        "moment": "^2.30.1",
         "vue": "^3.4.19",
         "vue-router": "^4.2.5"
     }
